force-app/main/default/objects/Application__c/fields/Bypass_Automation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Automation</label>
    <type>Checkbox</type>
</CustomField>