force-app/main/default/objects/Application__c/fields/Cover_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cover_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cover Letter Sent</label>
    <type>Checkbox</type>
</CustomField>