force-app/main/default/objects/Application__c/fields/Interview_Count__c.field-meta.xml
<CustomField>
    <fullName>Interview_Count__c</fullName>
    <label>Interview Count</label>
    <summaryForeignKey>Interview__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>