force-app/main/default/objects/Application__c/fields/Resume_Version__c.field-meta.xml
<CustomField>
    <fullName>Resume_Version__c</fullName>
    <label>Resume Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>