force-app/main/default/objects/Application__c/fields/Salary_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expectation__c</fullName>
    <label>Salary Expectation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>